# Bigbosslauncher

./: angular.json  package-lock.json  package.json
src/: custom-theme.scss
src-tauri/: Cargo.toml  authorization_token.json  index.html  minecraft_profile.json  minecraft_token.json  tauri.conf.json  xbox_security_token.json  xbox_token.json
src-tauri/src/: login.rs  main.rs
src/app/: app.component.ts  app.module.ts
src/app/login/: login.component.html  login.component.ts
