[package]
name = "Bigbosslauncher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = [ "derive" ] }
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
opener = "0.6.1"
thiserror = "1.0.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
